--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <i class="fa fa-key mr-2"></i> 生成验证码
                     </button>
                 </div>
-                <p class="text-xs text-gray-400 mt-2">示例密钥: XCDINALI5EQCQA5S 或 HQ6KBMKBJ3IOLTBW</p>
+                <p class="text-xs text-gray-400 mt-2">示例密钥: XCDINALI5EQCQA5S</p>
             </div>
             
             <!-- 验证码显示区域 -->
